--- a/WebRoot/css/nav.css
+++ b/WebRoot/css/nav.css
@@ -83,6 +83,7 @@
 	opacity: 1;
 }
 #download_button {
+	display: none;
 	cursor: pointer;
 	text-decoration: none;
 	color: rgba(0,0,0,0.5);
@@ -107,6 +108,7 @@
 	top: 0;
 }
 #city {
+	display: none;
 	position: absolute;
 	cursor: pointer;
 	display: block;
