--- a/WebRoot/css/nav.css
+++ b/WebRoot/css/nav.css
@@ -209,6 +209,13 @@
 	display: inline-block;
 	cursor: pointer;
 }
+#user_log a {
+	color: rgba(0,0,0,0.8);
+	text-decoration: none;
+	margin: 0;
+	display: inline-block;
+	cursor: pointer;
+}
 #user_log>#shopping {
 	width: 20px;
 	height: 20px;
