--- a/WebRoot/food/css/nav.css
+++ b/WebRoot/food/css/nav.css
@@ -32,13 +32,14 @@
 #nav {
 	width: 100%;
 	height: 70px;
-	background:rgba(255,255,255,1) url("../images/logo.png") no-repeat 140px;
+	background:rgba(255,255,255,1) url("../images/logo.png") no-repeat 42px;
 	border-bottom: 2px solid rgba(240,180,20,1);
 	background-size: 60px;
 	position: fixed;
 	top: 0;
 	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 	z-index: 100;
+	background-size: 162px;
 }
 #nav span {
 	position: absolute;
